Updated Path to JS file.

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -19,5 +19,5 @@
             <div id="cpuDiv"></div>
         </div>
     </body>
-      <script type="text/javascript" src="file:///home/kieran/Projects/odin_on_rails/rock-paper-scissors/dom-manipulation/script.js"></script>
+      <script type="text/javascript" src="script.js"></script>
 </html>
